# sipi

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .lsan_suppressions.txt  404.html  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT-MAP.md  CONTEXT.md  CONVENTIONS.md  DEPRECATIONS.md  Dockerfile  Dockerfile.debug  Dockerfile.nix-build  Dockerfile.old  Dockerfile.remote-sipi-env  Dockerfile.sipi-dev-env  Dockerfile.zig-static  MODULE.bazel  Makefile  README.md  RELEASING.md  REVIEW.md  UBIQUITOUS_LANGUAGE.md  codecov.yml  default.nix  flake.nix  generate_icc_header.sh  index.html  justfile  llms-full.txt  llms.txt  (+10 more)
bazel/: BUILD.bazel  all_content.BUILD.bazel  approvaltests_cpp.bzl  ar_wrapper.sh  benchmark_fixtures.BUILD.bazel  benchmark_fixtures_extension.bzl  exiv2.BUILD.bazel  foreign_cc_helpers.bzl  gh_release.bzl  glibc23_compat.c  jansson.BUILD.bazel  jbigkit.BUILD.bazel  kakadu.BUILD.bazel  kakadu.bzl  kakadu_extension.bzl  lcms2.BUILD.bazel  magic_database.bzl  sentry.BUILD.bazel  sole.BUILD.bazel  tiff.BUILD.bazel  tracy.BUILD.bazel
bazel/distroless/: BUILD.bazel  bookworm.lock.json  bookworm.yaml
bazel/patches/: prometheus_cpp_load_cc.patch
config/: BUILD.bazel  sipi.config.lua  sipi.init.lua  sipi.loadtest-config.lua  sipi.localdev-config.lua  sipi.test-config.lua  sipi_iiif.ini
ext/bzip2/: BUILD.bazel  CMakeLists.txt
ext/curl/: BUILD.bazel  CMakeLists.txt
ext/exiv2/: BUILD.bazel  CMakeLists.txt
ext/expat/: BUILD.bazel  CMakeLists.txt
include/: BUILD.bazel  CLI11.hpp  Logger.h  PhpSession.h  Salsah.h  SipiCache.h  SipiCommon.h  SipiConf.h  SipiConfig.h.in  SipiConnectionMetricsAdapter.h  SipiFilenameHash.h  SipiHttpServer.hpp  SipiIO.h  SipiImage.h  SipiLua.h  SipiMetrics.h  SipiPeakMemory.h  SipiReport.h  SipiSentry.h  SipiVersion.h.in  Template.h  VideoHD.icm  favicon.h  otel.hpp
include/ICC-Profiles/: Adobe98.icc  CIERGB.icc  D50_XYZ.icc  D55_XYZ.icc  D65_XYZ.icc  P3D60.icc  P3D65.icc  P3DCI.icc  PAL_SECAM.icc  ProPhoto.icc  Rec2020-Rec1886.icc  Rec709-Rec1886.icc  SMPTE-C.icc  VideoNTSC.icc  VideoPAL.icc  WideGamut.icc  YCC601.icm  YCC709.icm
include/formats/: SipiIOJ2k.h  SipiIOJpeg.h  SipiIOPdf.h  SipiIOPng.h  SipiIOTiff.h
include/handlers/: iiif_handler.hpp
include/iiifparser/: SipiDecodeDims.h  SipiRegion.h  SipiSize.h
include/metadata/: SipiExif.h  SipiIcc.h  SipiIccDetail.h
include/parsers/: SipiIdentifier.h  SipiQualityFormat.h
scripts/: BUILD.bazel  cache.lua  exit.lua  fetch-kakadu.sh  orientation.lua  shttps-context-check.sh  test_functions.lua  upload.lua  vendor.sh
scripts/toolchains/: zig-ar  zig-c++  zig-cc
server/: BUILD.bazel
shttps/: BUILD.bazel  CMakeLists.txt  CONTEXT.md  ChunkReader.cpp  ChunkReader.h  Connection.cpp  Connection.h  Error.cpp  Error.h  Global.h  Hash.cpp  Hash.h  LuaServer.cpp  LuaServer.h  LuaSqlite.cpp  Parsing.cpp  Server.cpp  Server.h  Shttp.cpp  SockStream.cpp  SockStream.h  SocketControl.cpp  SocketControl.h  ThreadControl.cpp  ThreadControl.h  jwt.c  jwt.h  makeunique.h  sole.hpp
src/: BUILD.bazel  Logger.cpp  PhpSession.cpp  Salsah.cpp  SipiCache.cpp  SipiCache.h  SipiCommon.cpp  SipiConf.cpp  SipiConnectionMetricsAdapter.cpp  SipiError.cpp  SipiError.h  SipiError.hpp  SipiFilenameHash.cpp  SipiHttpServer.cpp  SipiHttpServer.h  SipiHttpServer.hpp  SipiIO.h  SipiImage.cpp  SipiImage.h  SipiImage.hpp  SipiImageError.h  SipiImageError.hpp  SipiLua.cpp  SipiMemoryBudget.cpp  SipiMemoryBudget.h  SipiMetrics.cpp  SipiRateLimiter.cpp  SipiRateLimiter.h  SipiReport.cpp  SipiSentry.cpp  Template.cpp  main.cpp  nsswitch.conf  otel.hpp  populate_from_image.cpp  populate_from_image.h  process_benchmark.cpp  sipi.cpp
src/cli/: BUILD.bazel  access_file_orchestrator.cpp  access_file_orchestrator.h  cli_app.cpp  service_file_orchestrator.cpp  service_file_orchestrator.h  sipi.cpp  verify_orchestrator.cpp  verify_orchestrator.h
src/cli-rs/: BUILD.bazel  Cargo.toml
src/ffi/: BUILD.bazel  SipiLua.cpp  SipiLua.h  engine_context.cpp  engine_context.h  lua_config.cpp  lua_config.h  metrics_snapshot.h  metrics_snapshot_test.cpp  preflight.cpp  preflight.h  response_sink.h  run_lua_route.cpp  run_lua_route.h  seam_probe_test.cpp  serve_image.cpp  serve_image.h  serve_image_test.cpp  serve_response.cpp  serve_response.h  serve_response_test.cpp  serve_timings.cpp  serve_timings.h  serve_timings_test.cpp  sipi_ffi.cpp  sipi_ffi.h
src/formats/: SipiIOJ2k.cpp  SipiIOJ2k.h  SipiIOJpeg.cpp  SipiIOJpeg.h  SipiIOPdf.cpp  SipiIOPng.cpp  SipiIOTiff.cpp  SipiIOTiff.h  decode_benchmark.cpp  encode_benchmark.cpp  output_sink.cpp  output_sink.h
src/handlers/: iiif_handler.cpp  iiif_handler.hpp
src/iiifparser/: SipiDecodeDims.cpp  SipiDecodeDims.h  SipiIdentifier.cpp  SipiQualityFormat.cpp  SipiQualityFormat.h  SipiRegion.cpp  SipiRegion.h  SipiRotation.cpp  SipiRotation.h  SipiSize.cpp  SipiSize.h  parse_benchmark.cpp
src/logging/: BUILD.bazel  logger.cpp  logger.h
src/metadata/: BUILD.bazel  SipiEssentials.cpp  SipiEssentials.h  SipiExif.cpp  SipiExif.h  SipiIcc.cpp  SipiIcc.h  SipiIptc.cpp  SipiIptc.h  SipiXmp.cpp  SipiXmp.h  essentials.cpp  essentials.h  essentials.proto  essentials_test.cpp  exif.cpp  exif.h  icc.cpp  icc.h  icc_normalize_test.cpp  iptc.cpp  iptc.h  photometric_interpretation.h  test_main.cpp  xmp.cpp  xmp.h
src/observability/: BUILD.bazel  connection_metrics_adapter.cpp  connection_metrics_adapter.h  metrics.cpp  metrics.h  profiling.h  sentry.cpp  sentry.h  sentry_init.cpp  sentry_init.h
src/parsers/: SipiIdentifier.cpp  SipiQualityFormat.cpp  SipiRegion.cpp  SipiRotation.cpp  SipiSize.cpp
src/server-rs/: BUILD.bazel  Cargo.toml
src/shttps/: BUILD.bazel  Connection.cpp  Connection.h  LuaServer.cpp  LuaSqlite.h  Parsing.cpp  Parsing.h  README.md  Server.cpp  Shttp.cpp  SocketControl.h  jwt.c
test/: BUILD.bazel  CMakeLists.txt  test_paths.h  test_paths.hpp
tools/: BUILD.bazel  bazel-cred-helper.sh  bin2c.rs  check_sanitizer_findings.sh  differential_coverage_check.sh  workspace_status.sh
(+658 files in other folders)
