"""Sipi — IIIF-compatible media server.

Bazel 9.0.2 LTS module. Phase 1 of the Nix → Bazel migration (DEV-6342, PR Y);
nothing in CI invokes Bazel yet — Nix flake remains authoritative on `main`
until DEV-6348 (Y+6) deletes `package.nix`.

Versioning: `version.txt` is the single source of truth for the Sipi version
string. `tools/workspace_status.sh` reads it into `STABLE_SIPI_VERSION`, which
`expand_template` substitutes into `include/SipiVersion.h.in`. The `version`
attribute below is intentionally left at the placeholder "0.0.0" — Sipi is not
published to the Bazel Central Registry, so this string is never consumed by a
downstream module.
"""

module(
    name = "sipi",
    version = "0.0.0",
    compatibility_level = 1,
)

# ── Foundational rules ────────────────────────────────────────────────────
# `platforms` declares the OS/CPU pairs `//platforms:*` resolves against;
# `rules_cc` is required at the top of every BUILD.bazel using cc_* in
# Bazel 9 (built-in cc_* rules removed from the global namespace).
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")

# `aspect_bazel_lib` provides `expand_template` with `stamp_substitutions=`,
# which Y consumes to bake `STABLE_SIPI_VERSION` etc. into SipiVersion.h.
# Y+4 will reuse it for OCI image stamping (`image_created`, `image_labels`).
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# `rules_foreign_cc` wraps the 20 remaining third-party libs (cmake/,
# configure_make/, make/) — see ext/<lib>/BUILD.bazel files. Pinned
# versions are declared via http_archive() calls in this file. Two libs
# that historically lived under foreign_cc are no longer in the set:
# `prometheus-cpp` (now consumed via the BCR `bazel_dep` below) and `fmt`
# (dead dep — see comment in the http_archive section).
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# `prometheus-cpp` consumed via the BCR module rather than the foreign_cc
# `cmake()` wrapper used for the remaining third-party libs. SIPI only
# links the core counters/gauges/histograms (no HTTP exposer — metrics are
# served by SIPI's own shttps handler), so `@prometheus_cpp//core` is the
# only target consumed; the BCR module's optional `pull`/`push`/`civetweb`
# subgraphs stay outside the action graph. Version `1.3.0.bcr.2` is the
# BCR re-pack of upstream `v1.3.0` — same source, no upstream bump.
# `repo_name = "prometheus_cpp"` (underscore) keeps consumer BUILDs short
# vs. the BCR canonical `com_github_jupp0r_prometheus_cpp`.
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2", repo_name = "prometheus_cpp")

# Surgical fix for the BCR repack: upstream `core/BUILD.bazel` uses bare
# `cc_library(...)` without a `load()`, which Bazel 9 rejects (the legacy
# global cc rules were removed). The BCR module only patches MODULE.bazel,
# not the BUILD files. Patching here — instead of enabling
# `--incompatible_autoload_externally=+cc_library` project-wide — keeps
# the explicit-load discipline intact for our own first-party BUILDs.
# `patch_strip = 1` matches the conventional `a/`/`b/` prefixes in the
# diff. Drop this `single_version_override` when prometheus-cpp publishes
# a Bazel-9-clean BCR rev (the patch will fail loudly when the upstream
# file shape changes — desired feedback).
single_version_override(
    module_name = "prometheus-cpp",
    patch_strip = 1,
    patches = ["//bazel/patches:prometheus_cpp_load_cc.patch"],
)

# `toolchains_llvm` registers a hermetic LLVM 19.1.x toolchain. Sysroot wiring
# (Chromium debian sysroots for linux-x86_64 / linux-aarch64) lives below.
# macOS uses the system Xcode CLT SDK (no bundled macOS sysroot in
# toolchains_llvm); MACOSX_DEPLOYMENT_TARGET=12.0 is pinned in .bazelrc.
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

# ── Test-only deps (DEV-6343, PR Y+1) ──────────────────────────────────────
# Pinned to 1.17.0.bcr.2 because transitive deps (`aspect_bazel_lib` and the
# rules under it) already pull in `googletest@1.17.0`; declaring an older
# version here triggers a `--check_direct_dependencies` warning under
# Bazel 9's MVS resolver. 1.17.0 is API-compatible with 1.16.0 (the
# version pinned in `test/CMakeLists.txt`) — gtest's API has been stable
# across the 1.1x line, and no SIPI test calls a 1.17-specific symbol.
# The `dev_dependency = True` flag keeps it out of the runtime build graph
# so production targets in `//src` and `//shttps` cannot accidentally take
# a transitive dep on test infrastructure.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# ── LLVM toolchain — hermetic, LLVM 19.1.7, libc++ ─────────────────────────
#
# Linux libc++ ships in the LLVM tarball built against glibc, so it still
# needs sysroot headers and runtime libs at build time. Without an explicit
# sysroot the build silently links against the host's glibc — non-hermetic.
# Chromium's debian sysroot tarballs are the canonical fix (research-doc §4).
#
# The `stdlib` map pins libc++ on Linux to avoid cc_toolchain_config.bzl
# silently demoting "builtin-libc++" to "stdc++" under cross-compile (research
# §4 footnote). Y+8's eventual cross-compile work expects libc++; pin
# explicitly now to prevent the silent swap.
#
# darwin entries deliberately omitted: setting stdlib="libc++" appends
# `-l:libc++.a -l:libc++abi.a` to LDFLAGS (Linux-style static archive
# linkage), which ld64.lld rejects ("library not found for -l:libc++.a")
# because macOS only ships dynamic libc++ in the SDK. On darwin the
# toolchain default already uses libc++ via the Xcode CLT SDK; pinning is
# unnecessary and breaks the build.
sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

# Chromium's debian-bullseye sysroots — pulled from the canonical
# `sysroots.json` at:
#   https://chromium.googlesource.com/chromium/src/+/refs/heads/main/build/linux/sysroot_scripts/sysroots.json
# The URL is `{base}/{Sha256Sum}` per Chromium's `install-sysroot.py`
# (the sha doubles as the path component AND the integrity check). Bumping
# bullseye → bookworm later means re-running:
#   curl -s https://chromium.googlesource.com/chromium/src/+/refs/heads/main/build/linux/sysroot_scripts/sysroots.json?format=TEXT | base64 -d | jq '.bookworm_amd64'
# and copying the `Sha256Sum` field into both `urls` and `sha256` below.
sysroot(
    name = "sysroot_linux_x86_64",
    sha256 = "52d61d4446ffebfaa3dda2cd02da4ab4876ff237853f46d273e7f9b666652e1d",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/52d61d4446ffebfaa3dda2cd02da4ab4876ff237853f46d273e7f9b666652e1d"],
)

sysroot(
    name = "sysroot_linux_aarch64",
    sha256 = "c7176a4c7aacbf46bda58a029f39f79a68008d3dee6518f154dcf5161a5486d8",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/c7176a4c7aacbf46bda58a029f39f79a68008d3dee6518f154dcf5161a5486d8"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++23"},
    llvm_version = "19.1.7",
    stdlib = {
        "linux-x86_64": "libc++",
        "linux-aarch64": "libc++",
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x86_64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_aarch64//sysroot",
    targets = ["linux-aarch64"],
)
# ── Fuzz toolchain — libstdc++ for libFuzzer ABI parity (Linux) ────────────
#
# `--config=fuzz` is platform-pinned by the `bazel-build-fuzz` /
# `bazel-run-fuzz` justfile recipes:
#   * linux-x86_64 → `//tools/fuzz:linux_x86_64_fuzz` (this toolchain wins:
#     libstdc++, mirroring today's `pkgs.llvmPackages_19.stdenv` override
#     in `flake.nix:325-329`).
#   * darwin-aarch64 → `//tools/fuzz:darwin_aarch64_fuzz` (the default
#     `llvm_toolchain` wins for darwin entries here because this toolchain
#     does not register a darwin sysroot — toolchain resolution falls
#     through. macOS Apple SDK + libc++ is the libFuzzer ABI on darwin
#     anyway; no stdenv swap needed).
#
# `stdlib` is baked into `cc_toolchain_config`, not exposed as a per-build
# flag — `.bazelrc --config=fuzz` alone cannot swap stdlib. Registering
# this second toolchain is the canonical workaround (research findings §5,
# plan §"Toolchain — hermetic LLVM 19.1.x").
#
# `llvm.toolchain_root` shares `@llvm_toolchain_llvm` — Bazel does not
# re-fetch the LLVM tarball for the fuzz toolchain. Verified post-build
# by inspecting `bazel-out/external/` (only one `llvm_toolchain_llvm` dir).
#
# `extra_target_compatible_with(constraints = [fuzz_enabled])` (no
# `targets =` filter, so it applies to ALL platform entries this toolchain
# auto-registers for) makes this toolchain match ONLY platforms that
# carry `fuzz_enabled`. Without the broad scoping, the auto-created darwin
# entries would silently match plain darwin builds too.
#
# Modern libFuzzer (LLVM ≥ 16) ships its own private libc++; the libstdc++
# swap is belt-and-suspenders parity with today's behaviour and is
# eligible for removal in a later refactor.
llvm.toolchain(
    name = "llvm_toolchain_fuzz",
    cxx_standard = {"": "c++23"},
    llvm_version = "19.1.7",
    stdlib = {"linux-x86_64": "stdc++"},
)
llvm.toolchain_root(
    name = "llvm_toolchain_fuzz",
    # Must be a fully-qualified label — the rule's impl splits on `:` and
    # only the package portion is consumed. A bare `@llvm_toolchain_llvm`
    # (no `//:target`) fails validation.
    label = "@llvm_toolchain_llvm//:BUILD",
)
llvm.sysroot(
    name = "llvm_toolchain_fuzz",
    label = "@sysroot_linux_x86_64//sysroot",
    targets = ["linux-x86_64"],
)
llvm.extra_target_compatible_with(
    name = "llvm_toolchain_fuzz",
    constraints = ["//tools/fuzz:fuzz_enabled"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
use_repo(llvm, "llvm_toolchain_fuzz")

# Registration order matters: when both `llvm_toolchain_fuzz` and
# `llvm_toolchain` match a target platform (e.g. linux_x86_64_fuzz, where
# the default toolchain's [os:linux, cpu:x86_64] is a subset of the
# platform's [os:linux, cpu:x86_64, fuzz_enabled]), Bazel picks the
# first-registered. Register `llvm_toolchain_fuzz` first so it wins on
# fuzz_enabled platforms; non-fuzz builds skip past it (their platform
# lacks fuzz_enabled) and fall through to `llvm_toolchain`.
register_toolchains("@llvm_toolchain_fuzz//:all")
register_toolchains("@llvm_toolchain//:all")

# ── Kakadu (proprietary, GitHub-release-gated) ─────────────────────────────
# Custom repository_rule mirroring today's Nix FOD auth UX 1:1 — shells out
# to `gh release download` instead of `http_archive` + `auth_patterns` (the
# latter requires `~/.netrc`, which `gh` does not populate).
kakadu_extension = use_extension("//bazel:kakadu_extension.bzl", "kakadu_extension")
use_repo(kakadu_extension, "kakadu")

# ── ApprovalTests.cpp (single-header release, no BCR module) ───────────────
# `bazel/approvaltests_cpp.bzl` downloads the .hpp file released by the
# upstream project and exposes it as `cc_library(name = "approval_tests")`.
# Version + checksum mirror `test/CMakeLists.txt:60` verbatim so the
# Bazel-built and Nix-built test paths consume the same header bytes
# (DEV-6343, plan §"PR Y+1").
approvaltests_cpp = use_repo_rule("//bazel:approvaltests_cpp.bzl", "approvaltests_cpp")

approvaltests_cpp(
    name = "approvaltests_cpp",
    sha256 = "c00f6390b81d9924dc646e9d32b61e1e09abda106c13704f714ac349241bb9ff",
    url = "https://github.com/approvals/ApprovalTests.cpp/releases/download/v.10.13.0/ApprovalTests.v.10.13.0.hpp",
)

# ── Third-party C/C++ libs (rules_foreign_cc) ──────────────────────────────
# URLs and SHA256s are the single source of truth, no longer split between
# `cmake/dependencies.cmake` and per-lib `ext/<lib>/CMakeLists.txt`.
# `cmake/dependencies.cmake` itself is preserved until DEV-6349 (Y+7); its
# values are mirrored here verbatim during the migration window.
#
# Each archive's `build_file = "//bazel:all_content.BUILD.bazel"` exposes
# the raw source tree as `@<lib>//:all_srcs`; the foreign_cc rule lives
# under `//ext/<lib>:<lib>` and consumes that filegroup.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# bzip2 — gitlab archive
http_archive(
    name = "bzip2",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "1afcfe4d3eb95bac3b7f43588c9457ccf772360f7e657ba7279fac776f2469d4",
    strip_prefix = "bzip2-bzip2-1.0.8",
    url = "https://gitlab.com/bzip2/bzip2/-/archive/bzip2-1.0.8/bzip2-bzip2-1.0.8.tar.bz2",
)

http_archive(
    name = "curl",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "7b40ea64947e0b440716a4d7f0b7aa56230a5341c8377d7b609649d4aea8dbcf",
    strip_prefix = "curl-8.12.1",
    url = "https://curl.se/download/curl-8.12.1.tar.gz",
)

http_archive(
    name = "exiv2",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "e1671f744e379a87ba0c984617406fdf8c0ad0c594e5122f525b2fb7c28d394d",
    strip_prefix = "exiv2-0.28.5",
    url = "https://github.com/Exiv2/exiv2/archive/refs/tags/v0.28.5.tar.gz",
)

http_archive(
    name = "expat",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "6f0e6e01f7b30025fa05c85fdad1e5d0ec7fd35d9f61b22f34998de11969ff67",
    strip_prefix = "expat-2.5.0",
    url = "https://github.com/libexpat/libexpat/releases/download/R_2_5_0/expat-2.5.0.tar.bz2",
)

# fmt deliberately omitted from the Bazel graph: the existing CMake build
# wires fmt 6.2.1 in via `ext/fmt/CMakeLists.txt`, but no SIPI translation
# unit (`src/`, `shttps/`, `include/`) actually `#include`s it — `grep`
# confirms zero references. fmt 6.2.1 also fails to compile with C++23 +
# Apple libc++ from the Xcode CLT SDK (`std::char_traits<fmt::internal::char8_type>`
# is no longer specialised post-C++20), so building it for parity would
# require either bumping the version (parity break) or pinning the dep
# alone to C++17 (extra complexity). The dead dep is dropped here and
# from `src/BUILD.bazel`; if anything ever does want fmt, it can come
# back as a fresh pin against a C++23-clean version.

http_archive(
    name = "jansson",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "f4f377da17b10201a60c1108613e78ee15df6b12016b116b6de42209f47a474f",
    strip_prefix = "jansson-2.13.1",
    url = "https://www.digip.org/jansson/releases/jansson-2.13.1.tar.gz",
)

http_archive(
    name = "jbigkit",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "de7106b6bfaf495d6865c7dd7ac6ca1381bd12e0d81405ea81e7f2167263d932",
    strip_prefix = "jbigkit-2.1",
    url = "https://www.cl.cam.ac.uk/~mgk25/jbigkit/download/jbigkit-2.1.tar.gz",
)

http_archive(
    name = "jpeg",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "04705c110cb2469caa79fb71fba3d7bf834914706e9641a4589485c1f832565b",
    strip_prefix = "jpeg-9f",
    url = "https://ijg.org/files/jpegsrc.v9f.tar.gz",
)

http_archive(
    name = "lcms2",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "d873d34ad8b9b4cea010631f1a6228d2087475e4dc5e763eb81acc23d9d45a51",
    strip_prefix = "lcms2-2.16",
    url = "https://github.com/mm2/Little-CMS/releases/download/lcms2.16/lcms2-2.16.tar.gz",
)

http_archive(
    name = "libmagic",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "73c5f11a8edf0fded2fe3471b23a7fccb3f3369a13ea612529b869c8dc96aa2b",
    strip_prefix = "file-FILE5_46",
    url = "https://github.com/file/file/archive/refs/tags/FILE5_46.tar.gz",
)

http_archive(
    name = "lua",
    build_file = "//bazel:all_content.BUILD.bazel",
    # Drop Lua's optional readline integration. The `linux` and `macosx`
    # make targets in `src/Makefile` recursively self-invoke with
    # `SYSCFLAGS="-DLUA_USE_LINUX|MACOSX"` and `SYSLIBS="… -lreadline"`
    # baked into their recipes, so passing overrides via foreign_cc
    # `args`/`env` doesn't reach the inner compile (make's command-line
    # vars on the recursive invocation win). `LUA_USE_LINUX`/MACOSX
    # macro-aliases activate `LUA_USE_POSIX + LUA_USE_DLOPEN +
    # LUA_USE_READLINE`; substituting at the Makefile level keeps the
    # POSIX file API and dlopen support but skips readline. SIPI embeds
    # Lua as a script host — never as an interactive REPL — so the
    # readline dependency is dead weight, and Linux runners that don't
    # ship `<readline/readline.h>` (e.g. GitHub-hosted ubuntu-24.04)
    # then build cleanly.
    #
    # `perl -i -pe` is portable across BSD (macOS) and GNU (Linux) sed
    # behaviours that the bare `-i` flag differs on.
    patch_cmds = [
        "perl -i -pe 's/-DLUA_USE_(LINUX|MACOSX)/-DLUA_USE_POSIX -DLUA_USE_DLOPEN/g; s/-lreadline//g' src/Makefile",
    ],
    sha256 = "0c2eed3f960446e1a3e4b9a1ca2f3ff893b6ce41942cf54d5dd59ab4b3b058ac",
    strip_prefix = "lua-5.3.5",
    url = "https://www.lua.org/ftp/lua-5.3.5.tar.gz",
)

http_archive(
    name = "luarocks",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "eb20cd9814df05535d9aae98da532217c590fc07d48d90ca237e2a7cdcf284fe",
    strip_prefix = "luarocks-3.3.1",
    url = "https://luarocks.github.io/luarocks/releases/luarocks-3.3.1.tar.gz",
)

http_archive(
    name = "openssl",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "002a2d6b30b58bf4bea46c43bdd96365aaf8daa6c428782aa4feee06da197df3",
    strip_prefix = "openssl-3.4.1",
    url = "https://github.com/openssl/openssl/releases/download/openssl-3.4.1/openssl-3.4.1.tar.gz",
)

http_archive(
    name = "png",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "d236ef40d8733b5a1f5dfd3f8386a7741a0bdd896b6677be0a9cec9747296f4c",
    strip_prefix = "libpng-1.6.41",
    # SourceForge serves the tarball via a `…/download` redirect URL with no
    # `.tar.gz` suffix, which Bazel's `download_and_extract` rejects when
    # auto-sniffing the archive type. The GitHub mirror of libpng publishes
    # the same release artefact at a clean URL.
    url = "https://github.com/glennrp/libpng/archive/refs/tags/v1.6.41.tar.gz",
)

http_archive(
    name = "sentry",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "657391465eb6236d6e3f3eec1d25434178783328f1f0a744c99c9b049c6225e1",
    strip_prefix = "sentry-native-0.9.0",
    url = "https://github.com/getsentry/sentry-native/archive/refs/tags/0.9.0.tar.gz",
)

http_archive(
    name = "sqlite3",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "bc9067442eedf3dd39989b5c5cfbfff37ae66cc9c99274e0c3052dc4d4a8f6ae",
    strip_prefix = "sqlite-autoconf-3450200",
    url = "https://www.sqlite.org/2024/sqlite-autoconf-3450200.tar.gz",
)

http_archive(
    name = "tiff",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "67160e3457365ab96c5b3286a0903aa6e78bdc44c4bc737d2e486bcecb6ba976",
    strip_prefix = "tiff-4.7.0",
    url = "https://download.osgeo.org/libtiff/tiff-4.7.0.tar.gz",
)

http_archive(
    name = "webp",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "2fc8bbde9f97f2ab403c0224fb9ca62b2e6852cbc519e91ceaa7c153ffd88a0c",
    strip_prefix = "libwebp-1.2.0",
    url = "https://storage.googleapis.com/downloads.webmproject.org/releases/webp/libwebp-1.2.0.tar.gz",
)

http_archive(
    name = "xz",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "f6f4910fd033078738bd82bfba4f49219d03b17eb0794eb91efbae419f4aba10",
    strip_prefix = "xz-5.2.5",
    url = "https://tukaani.org/xz/xz-5.2.5.tar.gz",
)

http_archive(
    name = "zlib",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "bb329a0a2cd0274d05519d61c667c062e06990d72e125ee2dfa8de64f0119d16",
    strip_prefix = "zlib-1.3.2",
    url = "https://zlib.net/zlib-1.3.2.tar.gz",
)

http_archive(
    name = "zstd",
    build_file = "//bazel:all_content.BUILD.bazel",
    sha256 = "37d7284556b20954e56e1ca85b80226768902e2edabd3b649e9e72c0c9012ee3",
    strip_prefix = "zstd-1.5.7",
    url = "https://github.com/facebook/zstd/archive/refs/tags/v1.5.7.tar.gz",
)
